--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
   ],
   "dependencies": {
     "rambda": "^6.9.0",
-    "regexparam": "^2.0.0"
+    "regexparam": "^3.0.0"
   },
   "peerDependencies": {
-    "svelte": "^4.2.1"
+    "svelte": "4.x"
   }
 }
